<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/homeFragment">

    <fragment
        android:id="@+id/homeFragment"
        android:name="com.example.cineverse.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_home_to_movieDetail"
            app:destination="@id/movieDetailFragment" />
    </fragment>

    <fragment
        android:id="@+id/categoriesFragment"
        android:name="com.example.cineverse.ui.categories.CategoriesFragment"
        android:label="@string/title_categories"
        tools:layout="@layout/fragment_categories" />

    <fragment
        android:id="@+id/searchFragment"
        android:name="com.example.cineverse.ui.search.SearchFragment"
        android:label="@string/title_search"
        tools:layout="@layout/fragment_search">
        <action
            android:id="@+id/action_search_to_movieDetail"
            app:destination="@id/movieDetailFragment" />
    </fragment>

    <fragment
        android:id="@+id/favoritesFragment"
        android:name="com.example.cineverse.ui.favorites.FavoritesFragment"
        android:label="@string/title_favorites"
        tools:layout="@layout/fragment_favorites">
        <action
            android:id="@+id/action_favorites_to_movieDetail"
            app:destination="@id/movieDetailFragment" />
    </fragment>

    <fragment
        android:id="@+id/profileFragment"
        android:name="com.example.cineverse.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/movieDetailFragment"
        android:name="com.example.cineverse.ui.detail.MovieDetailFragment"
        android:label="@string/title_movie_detail"
        tools:layout="@layout/fragment_movie_detail">
        <argument
            android:name="movieId"
            app:argType="integer" />
    </fragment>

</navigation>
